WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295071
Adds Quirk to remove a misleading message from Facebook (with their agreement)
https://bugs.webkit.org/show_bug.cgi?id=295071
Summary
Adds Quirk to remove a misleading message from Facebook (with their agreement)
Karl Dubost
Reported
2025-06-26 16:10:58 PDT
Steps to reproduce: 1. Open Safari 2. Go to Facebook.com 3. (Log in if you are not already logged in) 4. On the top right, there is a small round icon with a flash sign, click on it. 5. A column appears on the right side with the title Chats. Result: Under the search form area in this column, there is a message saying “You may need to update your browser”. Facebook has acknowledged the message is not needed, and they plan to remove it. This is just to provide the quirk in the meantime while they do the work on their end.
Attachments
Add attachment
proposed patch, testcase, etc.
Karl Dubost
Comment 1
2025-06-26 16:11:41 PDT
<
rdar://100871402
>
Karl Dubost
Comment 2
2025-06-30 21:56:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47422
EWS
Comment 3
2025-07-01 22:51:56 PDT
Committed
296902@main
(85d18c8b5ec2): <
https://commits.webkit.org/296902@main
> Reviewed commits have been landed. Closing PR #47422 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug