Adds Quirk to remove a misleading message from Facebook (with their agreement) https://bugs.webkit.org/show_bug.cgi?id=295071 rdar://100871402

Reviewed by Brent Fulgham.

Facebook chat feature is currently adding a message which is not
necessary and misleading as acknowledged by Facebook themselves. They
are planning to remove it. In the meantime, this quirk will suppress
this message which is entirely based on user agent sniffing and not
specific feature detection.

When Facebook has fixed their code server side, the quirk can be removed.
See <https://webkit.org/b/295318> <rdar://154828745>

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsFacebookRemoveNotSupportedQuirk const):
(WebCore::handleFacebookQuirks):
(WebCore::Quirks::determineRelevantQuirks):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustForSiteSpecificQuirks const):

Canonical link: https://commits.webkit.org/296902@main