Source/WebCore/page/Quirks.h
@@ -126,6 +126,8 @@ public:
 
     bool needsPrimeVideoUserSelectNoneQuirk() const;
 
+    bool needsFacebookRemoveNotSupportedQuirk() const;
+
     bool needsScrollbarWidthThinDisabledQuirk() const;
     bool needsBodyScrollbarWidthNoneDisabledQuirk() const;
 
